Applied changes according to comments from https://github.com/singulart

--- a/src/locales/ru/about.json
+++ b/src/locales/ru/about.json
@@ -11,15 +11,15 @@
         "cto": "CTO",
         "cooAndGrowth": "COO и развитие",
         "all": "Все",
-        "allMembers": "Все члены"
+        "allMembers": "Все участники"
       }
     },
     "siteMetadata": {
-      "title": "Про нас",
+      "title": "О нас",
       "description": "Мы не только предлагаем отличную заработную плату и гибкие условия, но и четкую миссию, команду и время для того, чтобы ты смог сделать что-то, что меняет все."
     },
     "hero": {
-      "title": "Мы создаем Joystream чтобы сделать его бесплатным",
+      "title": "Мы создаем Joystream, чтобы отпустить его на свободу",
       "subtitle": "Команда Jsgenesis является ядром, которое разрабатывает Joystream - платформу на блокчейне с открытым кодом."
     },
     "ourTeam": {
