--- a/src/locales/ru/acropolis.json
+++ b/src/locales/ru/acropolis.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Сеть Acropolis",
-      "text": "Изучай доступные варианты участия и выбирай те, которые тебе больше всего подходят. Влияй на развитие платформы и зарабатывай при этом реальные деньги.",
+      "text": "Изучить доступные варианты участия и выбрать те, которые тебе больше всего подходят. Влияй на развитие платформы и зарабатывай при этом реальные деньги.",
       "chipText": "Что это?"
     },
     "heroCard": {
@@ -19,11 +19,11 @@
       "title": "Важная документация",
       "fullSpecifications": {
         "title": "Полная спецификация",
-        "text": "Читай спецификацию новых возможностей Acropolis."
+        "text": "Прочесть спецификацию новых возможностей Acropolis."
       },
       "releasePlan": {
         "title": "Релиз план",
-        "text": "Читай релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
+        "text": "Прочесть релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
       }
     },
     "testnetGoals": {
@@ -31,20 +31,20 @@
       "subtitle": "Цели, изложенные ниже, являются упрощенным перечнем основных результатов в нашем релизе <0>OKR</0>",
       "goals": {
         "forum": {
-          "title": "Построение и выпуск чейн-форума",
-          "text": "Финальная платформа будет содержать множество средств для упрощения безопасного общения, включая публичное, личное, а также возможность делиться информацией между членами платформы. Форум будет первым шагом, позволяя членам платформы общаться, делиться идеями и вести обсуждения."
+          "title": "Построение и выпуск форума на технологии блокчейн",
+          "text": "Финальная платформа будет содержать множество средств для упрощения безопасного общения, включая публичное, личное, а также возможность делиться информацией между членами платформы. Форум будет первым шагом, позволяющим членам платформы общаться, делиться идеями и вести обсуждения."
         },
         "storageNode": {
-          "title": "Перестроение и выпуск узла хранения",
-          "text": "В то время, как старый узел хранения имел некоторые баги, которые делали синхронизацию между клиентами не стабильной, имел жестко прописанные связи, новый узел хранения работает как нужно, без иерархий или особых привилегий."
+          "title": "Перестроение и выпуск узла-хранилища",
+          "text": "В то время, как старый узел-хранилище имел некоторые баги, которые делали синхронизацию между клиентами нестабильной, имел жестко прописанные связи, новый узел-хранилище работает как нужно, без иерархий или особых привилегий."
         },
         "storageProviders": {
-          "title": "Гарантия высокого аптайма провайдеров хранения",
-          "text": "На общее впечатления от работы с платформой как создателей контента, так и его потребителей, влияют множество параметров, и самым важным, является то, как узел хранения отвечает на запросы. Будет ли достигнута эта цель, зависит как от надежности программного обеспечения, хорошей системы оповещения и отчетности, а также слаженных действий по корректировке с нескольких сторон."
+          "title": "Гарантировать высокий аптайм узлов-хранилищ",
+          "text": "На общее впечатления от работы с платформой как создателей контента, так и его потребителей, влияют множество параметров, и самым важным, является то, как узел-хранилище отвечает на запросы. Будет ли достигнута эта цель, зависит как от надежности программного обеспечения, хорошей системы оповещения и отчетности, а также слаженных действий по корректировке с нескольких сторон."
         },
         "tranches": {
-          "title": "Построение узла хранения на \"траншах\"",
-          "text": "Несмотря на то, что папка с контентом, на данном этапе, мала, в какой-то момент станет нереальным ожидать, что у всех поставщиков хранения будет находиться полная копия всего контента. Транши позволят поставщикам услуг хранения выбрать тот набор папок с данными, который соответствует их возможностям."
+          "title": "Построение узла-хранилища на \"траншах\"",
+          "text": "Несмотря на то, что реестр контента, на данном этапе, мал, в какой-то момент станет нереальным ожидать, что у всех операторов узлов-хранилищ будет находиться полная копия всего контента. Транши позволят операторам узлов-хранилищ выбрать то количество данных, которое соответствует их возможностям."
         }
       }
     },
