--- a/src/locales/ru/alexandria.json
+++ b/src/locales/ru/alexandria.json
@@ -19,11 +19,11 @@
       "title": "Важная документация",
       "releasePlan": {
         "title": "Релиз план",
-        "text": "Читай релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
+        "text": "Прочесть релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
       },
       "blogPost": {
         "title": "Объявление",
-        "text": "Читай краткое руководство по тестнету Alexandria и его целям."
+        "text": "Прочесть краткое руководство по тестнету Alexandria и его целям."
       }
     },
     "testnetGoals": {
@@ -31,8 +31,8 @@
       "subtitle": "Цели, изложенные ниже, являются упрощенным перечнем основных результатов в тестнете Alexandria.",
       "goals": {
         "membershipModule": {
-          "title": "Приведение в порядок модуля членства",
-          "text": "Решение технических проблем в модуле членства и обеспечение возможности перехода к концепции использования члена системы в качестве единого корневого идентификатора в будущих выпусках."
+          "title": "Стабилизация модуля учетных записей",
+          "text": "Решение технических проблем в модуле учетных записей и обеспечение возможности перехода к концепции использования учетной записи пользователя в качестве единого корневого идентификатора в будущих релизах."
         },
         "substrateVersion": {
           "title": "Переход к Substrate v2.0.0 RC4",
