--- a/src/locales/ru/antioch.json
+++ b/src/locales/ru/antioch.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Сеть Antioch",
-      "text": "Релиз Antioch направлен на исправление ошибки разделения цепочки, которая, к сожалению, вызвала саботаж в работе предыдущего тестнета."
+      "text": "Релиз Antioch направлен на исправление ошибки разделения цепочки, которая, к сожалению, вызвала критическую ошибку в работе предыдущего тестнета."
     },
     "heroCard": {
       "title": "ЗАМЕЩЕН SUMER "
@@ -14,11 +14,11 @@
       "title": "Важная документация",
       "releasePlan": {
         "title": "Релиз план",
-        "text": "Читай релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
+        "text": "Прочесть релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
       },
       "blogPost": {
         "title": "Объявление",
-        "text": "Читай краткое руководство по тестнету Antioch и его целям."
+        "text": "Прочесть краткое руководство по тестнету Antioch и его целям."
       }
     },
     "testnetGoals": {
