--- a/src/locales/ru/athens.json
+++ b/src/locales/ru/athens.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Сеть Athens",
-      "text": "Изучай доступные варианты участия и выбирай те, который тебе больше всего подходят. Влияй на развитие платформы и зарабатывай при этом реальные деньги.",
+      "text": "Изучите доступные варианты участия и выбирайте те, которые вам больше всего подходят. Влияйте на развитие платформы и зарабатывайте при этом реальные деньги.",
       "chipText": "Что это?"
     },
     "heroCard": {
@@ -23,7 +23,7 @@
       },
       "releasePlan": {
         "title": "Релиз план",
-        "text": "Читай релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
+        "text": "Прочесть релиз план в том виде, каким он был создан во время планирования и узнаваьть, как проходила разработка."
       }
     },
     "testnetGoals": {
@@ -43,8 +43,8 @@
           "text": "Несмотря на то, что узел хранения был построен и использовался для размещения и распространения контента платформы, в нем были некоторые ошибки, из-за которых он не мог синхронизироваться между клиентами и требовал жестко запрограммированных связей."
         },
         "runtimeUpgrade": {
-          "title": "Обновление среды выполнения посредством голосования Совета",
-          "text": "Намерение Jsgenesis состояло в том, чтобы создать предложение по <0>обновлению среды выполнения</0> и проголосовать за него в Совете. Если Совет достигнет кворума, согласованные правила системы будут автоматически обновляться в процессе. К сожалению, <1>сеть Sparta потерпела крах</1> до того, как мы достигли этой стадии, и в Athenes мы были вынуждены начать как новую сеть с новым генезисным блоком (genesis block)."
+          "title": "Обновление системных компонент блокчейна посредством голосования Совета",
+          "text": "Намерение Jsgenesis состояло в том, чтобы создать предложение по <0>обновлению среды выполнения</0> и проголосовать за него в Совете. Если Совет достигнет кворума, настройки консенсуса системы будут обновляться автоматически без приостановки в работе сети. К сожалению, <1>сеть Sparta потерпела крах</1> до того, как мы достигли этой стадии, и в Athenes мы были вынуждены начать как новую сеть с новым генезисным блоком (genesis block)."
         }
       }
     },
