--- a/src/locales/ru/babylon.json
+++ b/src/locales/ru/babylon.json
@@ -19,11 +19,11 @@
       "title": "Важная документация",
       "releasePlan": {
         "title": "Релиз план",
-        "text": "Читай релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
+        "text": "Читайте релиз план в том виде, каким он был создан во время планирования и узнавайте, как проходила разработка."
       },
       "blogPost": {
         "title": "Объявление в Блоге",
-        "text": "Читай краткое руководство по тестнету Babylon и его целям."
+        "text": "Прочесть краткое руководство по тестнету Babylon и его целям."
       }
     },
     "testnetGoals": {
@@ -32,14 +32,14 @@
       "goals": {
         "atlas": {
           "title": "Запуск Atlas 0.1",
-          "text": "Это будет первая версия нашего клиента для потребителей контента, цель которого - быть значительно более эффективнее, чем текущая версия Pioneer media."
+          "text": "Это будет первая версия нашего веб-приложения для потребителей контента, цель которого - быть значительно более эффективнее, чем текущая версия Pioneer media."
         },
         "contentDirectory": {
-          "title": "Публикация нового каталога контента и рабочей группы",
+          "title": "Публикация нового каталога контента и запуск соответствующей рабочей группы",
           "text": "Мы изменим каталог контента, чтобы учесть новую модель данных для содержимого, поддерживаемую новыми схемами. Мы также внесем некоторые связанные улучшения в рабочую группу Контент Кураторы."
         },
         "hydraNode": {
-          "title": "Развертывание первого автономного узла Joystream Hydra, поддерживающего каталог содержимого",
+          "title": "Развертывание первого автономного узла Joystream Hydra, пока что поддерживающего только функции каталога контента",
           "text": "Для поддержки нового каталога контента требуется дальнейшая работа над нашей структурой Hydra."
         }
       }
