--- a/src/locales/ru/brand.json
+++ b/src/locales/ru/brand.json
@@ -27,7 +27,7 @@
         "forbiddenUses": "Запрещенное использование",
         "colorPalettes": "Палитра цветов",
         "primaryColors": "Основные цвета",
-        "supportivePallet": "Вспомагательная палитра",
+        "supportivePallet": "Вспомогательная палитра",
         "secondaryPallet": "Второстепенная палитра",
         "iconography": "Иконографика",
         "descriptiveIcons": "Описательные изображения",
@@ -46,7 +46,7 @@
       },
       "logomarkConstruction": {
         "title": "01. Создание логотипа",
-        "simplePrinciples": "В конце концов, мы придумали логотип, который сочетает в себе несколько простых принципов, которые хорошо отражаются в посыле бренда.",
+        "simplePrinciples": "В конце концов, мы придумали логотип, который сочетает в себе несколько простых принципов, которые хорошо отражают идею бренда.",
         "combination": "Наш логотип представляет собой комбинацию буквы J (обозначающей название Joystream) и трех параллельных полос, которые представляют потоки данных и поток информации и технологий.",
         "image": {
           "logomarkDescription": "Зона окончания логотипа равна высоте синего квадрата (обозначена на схеме цифрой 5а)."
@@ -54,7 +54,7 @@
       },
       "logoConstruction": {
         "title": "02. Создание лого",
-        "combination": "Лого Joystream это комбинация логотипа и специальной типографики, которая была разработана, чтобы быть лучшим связующим звеном между логотипом и тем, что означает Joystream. Он выполнен в строгом техничном стиле, но также демонстрирует пластичность и ощищениу структуры.",
+        "combination": "Лого Joystream это комбинация логотипа и специальной типографики, которая была разработана, чтобы быть лучшим связующим звеном между логотипом и ценностями Joystream. Он выполнен в строгом техничном стиле, но также демонстрирует пластичность и ощущение структуры.",
         "horizontalLockup": "Горизонтальный Макет",
         "verticalLockup": "Вертикальный Макет"
       },
@@ -64,10 +64,10 @@
         "safeUse": "Самое безопасное использование",
         "visualPresentation": "Чтобы обеспечить наилучшее визуальное представление логотипа, его лучше всего использовать в размерах от <0>200 до 500+px</0> в ширину.",
         "horizontalNarrow": "Логотип Joystream никогда не должен быть меньше 100 пикселей в цифровом формате или 20 мм при печати по горизонтали.",
-        "verticalNarrow": "Вертикальное отобрежение лого не должно быть меньше 70 пикселей в цифровом или 15 мм в печатном варианте."
+        "verticalNarrow": "Вертикальное отображение лого не должно быть меньше 70 пикселей в цифровом или 15 мм в печатном варианте."
       },
       "logoSocialIcons": {
-        "title": "04. Карнинки соц.сетей",
+        "title": "04. Картинки соц.сетей",
         "icon": "В случаях с брендом Joystream, мы можем использовать значок самостоятельно. Хотя значок может существовать без словесного знака, словесный знак никогда не должен размещаться без значка."
       },
       "logoForbiddenUses": {
@@ -121,7 +121,7 @@
       },
       "illustrations": {
         "overview": "Иллюстрации Joystream представляют собой символическое представление важных концепций проекта Joystream. Это может быть новая тестовая сеть, определенная роль в сети или любой другой не менее важный объект.",
-        "complex": "Они могут быть довольно сложными с визуальной точки зрения, несмотря на использование только трех цветов и без градиентов.",
+        "complex": "Они могут быть довольно сложными с визуальной точки зрения, несмотря на использование только трех цветов и отсутствие градиентов.",
         "patterns": "Иллюстрации часто сочетаются с узорами, и в случае размещения их на синем фоне, контур иллюстрации можно изменить на Joystream Blue, чтобы создать хороший цветовой баланс между узорами и фоном.",
         "distinctive": "Иллюстрации должны быть достаточно простыми, чтобы их можно было различить даже при уменьшении разрешения до 300x300 пикселей.",
         "adequateDetail": "Количество деталей должно соответствовать тому, что должно быть представлено иллюстрацией, и в большинстве случаев они должны использоваться в размерах не менее 500x500 пикселей."
@@ -130,11 +130,11 @@
         "translation": "Узоры - это близкий перевод логотипа (J) в различные варианты геометрических форм, представляющих поток информации, технологии и экспериментальную индивидуальность бренда Joystream.",
         "supportTool": "Они были введены как вспомогательный инструмент, чтобы выделить определенные элементы, создать эмоциональную составляющую и стать неотъемлемыми элементами визуальной идентичности бренда.",
         "sixPieces": "Узоры визуально состоят из шести разных частей, которые можно поворачивать на 90 градусов в любом направлении, и они всегда должны иметь размеры идеального квадрата.",
-        "oneCommonVertex": "У них также должна быть хотя бы одна общая вершина при касании. Однако, они не всегда должны касаться друг друга, и когда не касаются, расстояние между частями всегда должно быть равно их ширина/высота или кратонму значению.",
+        "oneCommonVertex": "У них также должна быть хотя бы одна общая вершина при касании. Однако, они не всегда должны касаться друг друга, и когда не касаются, расстояние между частями всегда должно быть равно их ширина/высота или кратному значению.",
         "howToUse": "Как использовать узоры",
         "oneOfFive": "В узорах может использоваться один из пяти разных цветов в зависимости от того, какой фон используется под ним, а также каково основное назначение в данной ситуации.",
         "density": "В зависимости от ситуации их можно использовать с большей или меньшей плотностью.",
-        "inUse": "Живые примеры узоров"
+        "inUse": "Примеры узоров"
       },
       "typography": {
         "overview": "Наши шрифты просты, понятны и современны. Это отражение нашего бренда и нашего голоса. Мы выбрали подходящие начертания шрифта из семейства PX Grotesk (обычный, полужирный) и Inter для конкретных точек соприкосновения и создания четких иерархий информации и сообщений.",
@@ -151,8 +151,8 @@
         "inUse": "Примеры использованных фотографий"
       },
       "motion": {
-        "subtitle": "Joystream - экспериментальная и захватывающая платформа, и ее движение должно быть таким же.",
-        "rules": "Общие правила анимаций можно описать несколькими простыми принципами: плавные переходы, динамичное, но плавное движение и общая плавность в ключевых кадрах. Эта комбинация должна обеспечивать последовательный и гибкий стиль анимации, охватывающий большинство случаев использования.",
+        "subtitle": "Joystream - экспериментальная и захватывающая платформа, и ее анимация должна быть такой же.",
+        "rules": "Общие правила анимаций можно описать несколькими простыми принципами: плавные переходы, динамичная, но плавная анимация и общая плавность в ключевых кадрах. Эта комбинация должна обеспечивать последовательный и гибкий стиль анимации, охватывающий большинство случаев использования.",
         "notLimiting": "Руководства ни в коем случае не должны быть ограничивающими, они должны служить только цели обеспечения единообразия анимации."
       }
     },
@@ -172,11 +172,11 @@
         "powerfulTool": "Брендинг Joystream - это мощный инструмент для общения со всеми пользователями на протяжении всего их опыта.",
         "experimental": "По сути, наши усилия являются экспериментальными; у нас нет ответов на все вопросы, и мы хотим быть честными в своем общении с миром.",
         "empowering": "Мы не обещаем дешевле, быстрее или лучше, как это обычно бывает при продаже потребительского виджета или услуги. Вместо этого у нас есть надежда, что мы сможем создать что-то более вдохновляющее и контролируемое с помощью нашего процесса экспериментов.",
-        "governance": "Наконец, в основе нашего видения лежит управление, поэтому то, что мы строим, никогда не будет закончено; мы строим только первую часть. Мы надеемся, что это толчек, который будет продвигаться сообществом далее, а мы просто предоставляем первый набор инструментов.",
-        "footer": "По причинам, изложенным выше, наш бренд должен нести это чувство экспериментов, азарта и создания чего-то динамичного и, в то же время, этичного."
+        "governance": "Наконец, в основе нашего видения лежит управление, поэтому то, что мы строим, никогда не будет закончено; мы строим только первую часть. Мы надеемся, что сообщество подхватит и разовьет эти усилия, а мы просто предоставляем начальный набор инструментов.",
+        "footer": "По причинам, изложенным выше, наш бренд должен передавать идею непрекращающегося экспериментирования, азарта и создания чего-то динамичного и, в то же время, этичного."
       },
       "logo": {
-        "title": "Мы хотим освободить СМИ, вдохновить людей и объединить их с помощью платформы.",
+        "title": "Мы хотим освободить цифровые медиа, вдохновить людей и объединить их с помощью платформы.",
         "uniqueness": "Создание бренда Joystream оказалось сложной задачей из-за его уникальности и необходимости постоянного развития.",
         "requirements": "Мы не только должны были принять во внимание очень широкую и разнообразную базу пользователей, но также нам нужно было создать бренд, который будет надежным в будущем и достаточно гибким, чтобы удовлетворить как существующие, так и будущие требования проекта.",
         "branding": "Сам бренд Joystream носит метафорический и символический характер, часто ссылаясь на символику древних городов, культуры, искусства и философии.",
@@ -184,7 +184,7 @@
       },
       "explanation": {
         "title": "Разъяснения к бренду",
-        "balance": "Наш новый брендинг направлен на поиск хорошего баланса между очень упрощенным тоном общения и символикой, и сложностью современных мировых проблем и технологий.",
+        "balance": "Наш новый брендинг направлен на поиск баланса между очень упрощенным тоном общения и символикой, и сложностью современных мировых проблем и технологий.",
         "patterns": "В нашем бренде используются мозаика, геометрические узоры и формы в сочетании с яркими цветами и символическими иллюстрациями.",
         "style": "Мы также применяем описательные значки в сочетании с простыми системными значками в стиле глифов и экспериментальным стилем иллюстраций."
       }
