--- a/src/locales/ru/constantinople.json
+++ b/src/locales/ru/constantinople.json
@@ -19,11 +19,11 @@
       "title": "Важная документация",
       "releasePlan": {
         "title": "Релиз план",
-        "text": "Читай релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
+        "text": "Читайте релиз план в том виде, каким он был создан во время планирования и узнавайте, как проходила разработка."
       },
       "blogPost": {
         "title": "Объявление в Блоге",
-        "text": "Читай краткое руководство по тестнету Constantinople и его целям."
+        "text": "Прочесть краткое руководство по тестнету Constantinople и его целям."
       }
     },
     "testnetGoals": {
