--- a/src/locales/ru/get-started.json
+++ b/src/locales/ru/get-started.json
@@ -12,9 +12,9 @@
     },
     "howToStart": {
       "title": "Как начать",
-      "discord": "Присоединяйся Discord",
+      "discord": "Присоединяйся к Discord",
       "tokens": "Получи бесплатные токены тестнета",
-      "membership": "Присоединяйтесь к членству в сети",
+      "membership": "Создай учетную запись в блокчейне",
       "opportunities": "Выберите одну из возможностей ниже"
     },
     "opportunities": {
@@ -34,23 +34,23 @@
       },
       "roles": {
         "title": "Роли",
-        "text": "Наш текущий тестнет позволяет вам участвовать в некоторых ролях платформы, которые будут доступны в основной сети.<0/><0/>Участие в этих ролях вознаграждается tJOY (наш токен тестовой сети), который поддерживается фиатными резервами в Jsgenesis и может быть обменен на биткойны (bitcoin).",
+        "text": "Наш текущий тестнет позволяет вам участвовать в некоторых ролях платформы, которые будут доступны в основной сети.<0/><0/>Участие в этих ролях вознаграждается tJOY (наш токен тестовой сети), который поддерживается фиатными резервами в Jsgenesis и может быть обменен на криптовалюту BCH.",
         "imageAlt": "маски"
       }
     },
     "activeRoles": {
       "title": "Активные роли в текущем тестнете",
       "validatorText": "Валидатор - это субъект, который проверяет достоверность создаваемых блоков, предлагает новые блоки и участвует в процессе согласования для фиксации нового блока в цепочке. Валидаторам обычно выплачивается фиксированная сумма за каждый произведенный блок. Эта роль имеет цель, очень похожую на цель майнеров в блокчейне Биткойн (Bitcoin).",
-      "councilMemberText": "Члены совета избираются заинтересованными сторонами в системе, чтобы действовать в долгосрочных интересах платформы. Они несут ответственность за распределение ресурсов, а рабочая группа по найму руководит повседневными операциями в рамках платформы. Это делается посредством системы предложений, позволяющей любому пользователю подавать предложения по изменению платформы тем или иным образом.",
-      "storageProviderText": "Есть важные активы платформы, которые не живут в блокчейне, такие как информационные носители. Целостность этих активов обеспечивается цепью, но отдельный набор узлов хранения и распределения позволяет загружать и скачивать такие данные. Поставщик хранилища участвует в этой деятельности, в частности, путем хранения больших объемов данных.",
+      "councilMemberText": "Члены совета избираются заинтересованными сторонами в системе, чтобы действовать в долгосрочных интересах платформы. Они несут ответственность за распределение ресурсов, и нанимают руководителей рабочих групп, которые следят за выполнением повседневных операций в рамках платформы. Это делается посредством системы предложений, позволяющей любому пользователю подавать предложения по изменению платформы тем или иным образом.",
+      "storageProviderText": "Есть важные активы платформы, которые не живут в блокчейне, такие как информационные носители. Целостность медиа-файлов на платформе обеспечивается блокчейном, хотя сами они хранятся вне его на так называемых узлах-хранилищах, откуда их скачивают пользователи. Узлы-хранилища управляются поставщиками хранилищ. Поставщик хранилища участвует в этой деятельности, в частности, путем хранения больших объемов данных.",
       "storageLeadText": "Руководитель службы хранения нанимается непосредственно Советом через систему предложений и занимается наймом, увольнением и расширенным управлением поставщиками хранилищ в сети.",
-      "contentCuratorText": "Кураторы контента несут ответственность за мониторинг публикаций нового контента в каталог и реагируют на сообщения о спорных публикациях. Они также должны обновлять информацию о содержании контента, чтобы обеспечить точность и правильность метаданных. Еще одна важная часть роли - сотрудничество со Строителями для улучшения инструментов для работы и взаимодействия с пользователями.",
-      "contentCreatorText": "Создатели контента - это те участники платформы, которые решили разместить на платформе свой оригинальный (или чужой, но лицензированный) контент. В настоящее время нет прямых стимулов для этой неформальной роли, хотя эффективные участники, скорее всего, будут вознаграждены через Программу для членов-учредителей.",
+      "contentCuratorText": "Кураторы контента несут ответственность за мониторинг публикаций нового контента в каталог и реагируют на сообщения о спорных публикациях. Они также должны обновлять информацию о содержании контента, чтобы обеспечить точность и правильность метаданных. Еще одна важная часть роли - сотрудничество с Разработчиками для улучшения инструментов для работы и взаимодействия с пользователями.",
+      "contentCreatorText": "Создатели контента - это те участники платформы, которые решили разместить на платформе оригинальный контент или контент третьих лиц, не запрещающий повторную публикацию на сторонних ресурсах. В настоящее время нет прямых стимулов для этой неформальной роли, хотя эффективные участники, скорее всего, будут вознаграждены через Программу для членов-учредителей.",
       "contentLeadText": "Совет имеет право назначить Главного Куратора Контента сети, который может нанять дополнительных кураторов контента. Главный Куратор Контента также определяет приоритеты для курирования. При необходимости, после обсуждения с советом, руководитель может также принять решение об увольнении кураторов, которые не выполняют свою работу надлежащим образом."
     },
     "roleCard": {
       "overview": "Обзор",
-      "buttonText": "Детали на GitHub"
+      "buttonText": "См. подробности на GitHub"
     }
   }
 }
