--- a/src/locales/ru/hydra.json
+++ b/src/locales/ru/hydra.json
@@ -2,15 +2,15 @@
   "hydra": {
     "siteMetadata": {
       "title": "Hydra - фреймворк для запросов Substrate",
-      "description": "Будучи вдохновленным Graph, он дает удобный способ предоставить разработчикам приложений мощный инструмент для запросов GraphQL о состоянии и истории вашей цепочки блоков Substrate."
+      "description": "Будучи вдохновленным The Graph, он дает удобный способ предоставить разработчикам приложений мощный инструмент для запросов GraphQL о состоянии и истории вашей цепочки блоков Substrate."
     },
     "hero": {
       "title": "Hydra - фреймворк для запросов Substrate",
-      "text": "Будучи вдохновленным Graph, он дает удобный способ предоставить разработчикам приложений мощный инструмент для запросов GraphQL о состоянии и истории вашей цепочки блоков Substrate."
+      "text": "Будучи вдохновленным The Graph, он дает удобный способ предоставить разработчикам приложений мощный инструмент для запросов GraphQL о состоянии и истории вашей цепочки блоков Substrate."
     },
     "value": {
-      "title": "Мы упрощаем вещи",
-      "subtitle": "Создание солидных приложений, которые взаимодействуют напрямую с узлом Substrate практически невозможно, а попытки сделать это - очень сложны и медленны.",
+      "title": "Как мы упростили жизнь разработчикам",
+      "subtitle": "Создание приложений, которые взаимодействуют напрямую с узлом Substrate практически невозможно, а попытки сделать это - очень сложны и медленны.",
       "values": {
         "slowFetching": {
           "title": "Медленная Загрузка",
@@ -39,8 +39,8 @@
       }
     },
     "snippet": {
-      "title": "Дорогостоящие запросы в GraphQL",
-      "subtitle": "Предоставьте разработчикам приложений мощный GraphQL API для чтения состояния и истории вашей цепочки блоков."
+      "title": "Возможности запросов в GraphQL",
+      "subtitle": "Предоставляет разработчикам приложений мощный GraphQL API для чтения состояния и истории вашей цепочки блоков."
     },
     "features": {
       "title": "Возможности Hydra",
@@ -71,9 +71,9 @@
         }
       }
     },
-    "videoTitle": "Проиграть видео инструкцию",
+    "videoTitle": "Видео-инструкция",
     "getStarted": {
-      "title": "Введение в Hydra!",
+      "title": "Введение в Hydra",
       "subtitle": "Воспользуйтесь следующими ссылками, чтобы связаться с нами и узнать еще больше.",
       "links": {
         "documentation": {
