--- a/src/locales/ru/landing.json
+++ b/src/locales/ru/landing.json
@@ -48,7 +48,7 @@
       "title": "Изучи Joystream сейчас",
       "subtitle": "Два быстро развивающихся приложения для получения контента и управления.",
       "atlas": {
-        "text": "Atlas - флагманское приложение для получение и публикации контента в Joystream. Смотри видео, следи за авторами, открывай новый для себя контент или создавай канал и формируй собственную аудиторию.",
+        "text": "Atlas - флагманское приложение для получения и публикации контента в Joystream. Смотри видео, следи за авторами, открывай новый для себя контент или создавай канал и формируй собственную аудиторию.",
         "link": "Попробовать Atlas",
         "imageAlt": "Ознакомление с Atlas"
       },
