--- a/src/locales/ru/manifesto.json
+++ b/src/locales/ru/manifesto.json
@@ -1,7 +1,7 @@
 {
   "manifesto": {
     "siteMetadata": {
-      "description": "Читай Манифест Joystream"
+      "description": "Прочесть манифест Joystream"
     },
     "hero": {
       "title": "Манифест Joystream",
@@ -10,60 +10,59 @@
     "problem": {
       "title": "Проблема",
       "text": {
-        "artAsTool": "Мы считаем, что искусство, будь то литература, музыка, фильмы, игры или представления, является важным инструментом, с помощью которого общества устанавливают общее понимание того, что является общим знанием среди всех членов. Эти выражения определяют ценности, и эти повествования, в конечном итоге, формируют культуру, веру и даже государственную политику. Поэтому очень важно, как они финансируется, распространяются и оплачиваются.",
-        "mediaAsPrimaryMedium": "Цифровые медиа стали основным средством распространения таких \"повествований\", а цифровые медиа-платформы стали ключевыми центрами, формирующими их активность.",
-        "unaccountableInstitutions": "К сожалению, из-за эффектов связанных с логикой работы сети, а также по характеру экономического масштабирования, государственных регуляций и политических интересов сегодня у нас осталось всего несколько крупных игроков, которые устанавливают условия того, как все происходит. Они почти полностью неподотчетны нормальным рыночным и политическим механизмам.",
-        "filteredOnTheirTerms": "В результате этого наши высказывания, истории, и взаимодействия управляются и фильтруются на их условиях. Это продолжает порождать целый набор проблем, будь то",
-        "inflexible": "негибкая монетизация, цензура спорных высказываний, несправедливое разделение прибыли с создателями и аудиторией, низкий уровень инноваций платформ или отсутствие доверия со стороны сторонних разработчиков."
+        "artAsTool": "Мы твердо убеждены в том, что творчество, будь то литература, музыка, кино, видеоигры или перформанс, является важным инструментом, объединяющим сообщества и их участников вокруг некоего общего знания. Творчество порождает нарративы, которые в свою очередь формируют культуру, систему убеждений и даже государственную политику. Следовательно, то, как творческая деятельность финансируется и распространяется, - крайне важно.",
+        "mediaAsPrimaryMedium": "Цифровые медиа стали сегодня мейстримным художественным средством, а медиаплатформы выполняют ключевую институциональную и организующую роль в процессах распространения креативного контента.",
+        "unaccountableInstitutions": "К сожалению, по ряду причин, среди которых выделим сетевой эффект, экономику глобального расширения, законодательные ограничения и политические интересы, мы вынуждены довольствоваться тем, что нам предлагают несколько гигантских институций, которые и устанавливают правила игры, сами оставаясь практически неподотчетными ни рынку, ни политическим механизмам.",
+        "filteredOnTheirTerms": "В результате наш контент, наши истории и переживания фильтруются и управляются по правилам платформ. Данная ситуация проблематична на многих уровнях:",
+        "inflexible": "негибкая монетизация, цензура, несправедливое распределение прибыли, отсутствие инноваций и снижение доверия сторонних разработчиков."
       }
     },
     "goal": {
       "title": "Цель",
       "text": {
-        "arrangement": "Мы призываем к договоренности, в которой медиа-платформы будут нести ответственность перед людьми, на которых они воздействуют, которые, в первую очередь, являются их пользователями, будь то потребители, креативщики, сторонние разработчики или сотрудники.",
-        "accountability": "Именно отсутствие такой ответственности является фундаментальным источником любой конкретной проблемы в любой конкретный момент."
+        "arrangement": "Мы считаем, что медиа-платформы должны быть ответственны перед своими пользователями, будь то конечные потребители, криэйторы, сторонние разработчики или штатные сотрудники.",
+        "accountability": "Именно отсутствие такой формы ответственности является корнем проблемы."
       }
     },
     "thesis": {
-      "title": "Основной тезис",
+      "title": "Тезис",
       "text": {
-        "coreThesis": "Наш основной тезис заключается в том, что для достижения этой цели необходимо решить две основные проблемы, и что правильным средством для этого является соответствующее применение современных технологий распределенных систем, включая блокчейны, смарт-контракты и токены."
+        "coreThesis": "Наш основной тезис заключается в том, что для достижения этой цели необходимо решить две основные проблемы, и что правильным средством на пути к решению является грамотное применение современных технологий распределенных систем, таких как блокчейн, смарт-контракты и токены."
       }
     },
     "wedge": {
       "title": "Камни Предкновения",
       "text": {
-        "alternative": "Самое первое, это вопрос о том, как создать альтернативу с нуля, принимая во внимание внешне факторы, которые делают любую новую платформу практически бесполезной, независимо от каких-либо присущих ей характеристик. Процесс такого создания, если посмотреть на историю, был в основном чем-то подобным искусству, где успех вряд-ли можно повторить, выполняя аналогичные шаги.",
-        "blockchainTokens": "Мы считаем, что токены блокчейна, заработанные и выпущенные ранним участникам, показали свою чрезвычайно эффективную мобилизационную эффективность, сплочая и мотивируя динамическое интернациональное сообщество.",
-        "initialHurdle": "Эта схема уже неоднократно помогала зарождающимся сообществам, такими как Биокойн (Bitcoin) преодолеть начальное препятствие сети. И несмотря на то, что нет уверенности в том, что этого будет достаточно, мы считаем этот механизм многообещающим в долгосрочной перспективе."
+        "alternative": "Во-первых: как создать альтернативу с нуля, учитывая силу внешних факторов, делающих эффективность любой новой платформы близкой к нулю, независимо от набора ее фич? Исторически конструированием подобных альтернатив занимались скорее как экспериментальной художественной практикой, а это значит, что воспроизвести успешный результат практически нереально.",
+        "blockchainTokens": "Мы видим как токены на блокчейне, заработанные и выпущенные ранними участниками, показывают свою чрезвычайную эффективность в мобилизации, интеграции и мотивации живого межнационального сообщества.",
+        "initialHurdle": "Это неоднократно позволяло зарождающимся сообществам, таким как сообщество Bitcoin, преодолевать последствия сетевого эффекта [1, 2, 3]. И хотя гарантии, что этого будет достаточно, нет, данный механизм в долгосрочной перспективе видится нам очень многообещающим."
       }
     },
     "accountability": {
-      "title": "Отчетность в Масштабе",
+      "title": "Масштабируем ответственность",
       "text": {
-        "createAndSustain": "Вторым является вопрос о том, как создать и поддерживать отчетность в такой платформе, когда она действительно достигает больших масштабов.",
-        "twoWays": "Мы понимаем, что существует два основных способа, которыми участники могут привлекать к ответственности структуры любого рода: голос и выход, в согласно Хиршману А. О. [4]."
+        "createAndSustain": "Во-вторых: как создать и поддерживать ответственность на постоянно разрастающейся платформе?",
+        "twoWays": "Согласно А.О. Хиршману [4] существует два основных метода, которыми участники могут привлекать к ответственности институции любого рода: голос и выход."
       }
     },
     "voice": {
       "title": "Голос",
       "text": {
-        "improveWithin": "Голос - это попытка улучшить или реформировать функционирование структуру изнутри. Эффективность этого зависит от некоторой способности как делиться надежной информацией с другими членами, так и иметь определенное влияние на процессы внутреннего управления. Текущие медиа-платформы не предоставляют пользователям эффективных способов сделать это.",
-        "infrastructure": "Мы считаем, что блокчейны обеспечивают организационную и экономическую инфраструктуру, которая может решить обе проблемы. Публичная, поддающаяся проверке и неизменяемая история экономических и административных записей предоставляет пользователям отличную основу для понимания текущего и прошлого состояния платформы. Это позволяет любому делать неопровержимые утверждения о соответствующих фактах и обстоятельствах.",
-        "control": "Кроме того, токены блокчейна позволяют нам использовать платформу и управлять ею полностью, предоставляя пользователям автоматическое место за столом для обсуждения решений на уровне платформы.",
-        "signWithCrypto": "Все, что требуется для создания, реализации или передачи способности участвовать в такой деятельности, - это возможность подписывать сообщения идентифицируемыми криптографическими ключами. Совершенно надежное заключение контрактов дает широкому, динамичному и неограниченному кругу пользователей средства управления платформой. Это может служить широкому кругу целей, таких как реализация проектов, регулирование участия в различных официально определенных ролях или даже обновление самих правил платформы. Именно такая интеграция надежных контрактов в экономические рельсы обеспечивает организационную инфраструктуру, которая больше соответствует нашим целям всеобъемлющего контроля, чем обычная инфраструктура, основанная на доверительном управлении."
+        "improveWithin": "Голос - это подход к улучшению или реформированию институции изнутри. Эффективность здесь зависит от возможности делиться надежной информацией с другими участниками, а также иметь определенное влияние на процессы внутреннего управления. Современные медиаплатформы не предоставляют пользователям эффективных способов сделать это.",
+        "infrastructure": "Мы считаем, что блокчейны обеспечивают организационную и экономическую инфраструктуру, которая может решить обе вышеописанные проблемы. Публичная, поддающаяся проверке и неизменяемая история экономических и административных записей предоставляет пользователям отличную базу для понимания текущего и прошлого состояния платформы. А это, в свою очередь, позволяет любому делать неопровержимые утверждения о соответствующих фактах и обстоятельствах. Кроме того, токены блокчейна позволяют не разделять пользование платформой и управление ею, автоматически предоставляя каждому место за столом, где обсуждаются решения на уровне платформы. ",
+        "signWithCrypto": "Все, что требуется для создания, реализации или передачи способности участвовать в такой деятельности, - это возможность подписывать сообщения идентифицируемыми криптографическими ключами. Идеально надежное взаимодействие дает широкому, динамичному и неограниченному кругу пользователей средства управления платформой. Это может служить широкому кругу целей, таких как осуществление проектов, регулирование участия в различных официально определенных ролях или даже обновление самих институциональных правил. Постановка такого взаимодействия на экономические рельсы обеспечивает организационную инфраструктуру, которая в большей степени соответствует нашим задачам инклюзивного управления, чем обычная инфраструктура, основанная на доверительном управлении."
       }
     },
     "exit": {
       "title": "Выход",
       "text": {
-        "exit": "Выход - это подход, при котором участие в структуре полностью прекращается в пользу присоединения или создания альтернативы. Эффективность этого зависит от затрат на уход, а также от присоединения или создания альтернативы, при этом все они низки по сравнению с лишениями, переносимыми в существующей структуре. В настоящее время это не так.",
-        "loweredCosts": "Создавая платформы на основе бесплатного программного обеспечения с открытым исходным кодом, открытых протоколов и открытых данных - как в случае с системами Blockchain, можно значительно снизить эти затраты. Поскольку пользователи контролируют свои собственные данные, идентификационные данные и активы, им намного проще присоединяться к новым платформам и даже брать с собой своих коллег.",
-        "competition": "Открытые протоколы и структуры данных создают изобилие интерфейсов с множественными адресами, где пользователям может даже не потребоваться переключаться между платформами, а вместо этого будет возможность использовать несколько платформ одновременно, что стимулирует конкуренцию на уровне платформ [5].",
-        "reusability": "Более того, использование открытого исходного кода означает, что весь программный капитал платформы можно легко повторно использовать, а поскольку все организационное состояние также является общедоступным, целые экосистемы могут быть разветвлены для создания новых альтернативных платформ с измененными политиками и целями."
+        "exit": "Выход - полное прекращение участия в институции или платформе в пользу присоединения к или создания альтернативы. Эффективность в этом случае зависит от того, насколько стоимость ухода в альтернативу ниже по сравнению с тем, что приходится платить за существующее положение дел, которое перестало устраивать. Сегодня стоимость ухода с платформ очень высока.",
+        "loweredCosts": "Создавая платформы на основе бесплатного программного обеспечения с открытым исходным кодом, открытых протоколов и открытых данных - как в случае с Blockchain-системами, можно значительно снизить эту стоимость. Поскольку пользователи контролируют свои данные и активы, им намного проще присоединяться к новым платформам и даже забрать с собой всех своих друзей.",
+        "competition": "Открытые протоколы и данные приведут к тому, что пользователь сможет вообще не переключаться, а вместо этого использовать несколько платформ одновременно, что поспособствует конкуренции на уровне платформ [5].",
+        "reusability": "Более того, использование открытого исходного кода означает, что весь софтверный капитал платформы можно легко переиспользовать, так что целые экосистемы могут быть взяты за основу и модифицированы для создания новых альтернативных платформ с измененными политиками и целями."
       }
     },
-    "ctaText": "В этой задумке еще есть место для большего количества людей, поэтому есть возможность принять участие, отправив <0>email</0> присоединиться в <1>Discord</1> или <2>Reddit</2>.",
+    "ctaText": "В этой задумке еще есть место для большего количества участников, поэтому есть возможность принять участие, отправив <0>email</0> присоединиться к <1>Discord</1> или <2>Reddit</2>.",
     "references": {
       "title": "Ссылки",
       "text": "<0>[1] Эрсам, Ф. Токены блокчейна и рассвет децентрализованной бизнес-модели. Medium. 1 августа, 2016.</0><0>[2] Сринивасан Б.С. Мысли о токенах. Medium. 27 мая, 2017.</0><0>[3] Диксон, К. Крипто-токены: прорыв в проектировании открытых сетей. Medium. 1 июня, 2017.</0><0>[4] Хиршман, Альберт О. Выход, голос и лояльность: реакция на упадок фирм, организаций и государств. №25. Издательство Гарвардского университета, 1970.</0><0>[5] Роше, Жан-Шарль и Жан Тироль. «Конкуренция платформ на двусторонних рынках». Журнал европейской экономической ассоциации 1.4 (2003): 990–1029.</0>"
