--- a/src/locales/ru/privacy-policy.json
+++ b/src/locales/ru/privacy-policy.json
@@ -23,7 +23,7 @@
         "content": "Используя любое Наше Программное обеспечение, Пользователь принимает настоящую Политику конфиденциальности. Если вы действуете от имени другой компании или работодателя, вы должны иметь полномочия действовать от их имени. Политика конфиденциальности не распространяется ни на один из наших информационных бюллетеней, где Пользователи связаны <0>политикой конфиденциальности</0> из <1>Mailchimp</1> <2/><2/>Политика конфиденциальности не применяется к любым другим сторонним службам, включая, помимо прочего, приложения, веб-сайты, инструменты или программное обеспечение, даже если они доступны по ссылкам или руководствам в нашем Программном обеспечении."
       },
       "changes": {
-        "title": "2. Изменения в Политику",
+        "title": "2. Изменения в Политике",
         "content": "Настоящая Политика конфиденциальности может быть изменена по собственному усмотрению Компании. Если будут внесены какие-либо существенные изменения, Пользователь будет уведомлен в используемом Сервисе. Обратите внимание, что добавление новых продуктов для включения в термин «Программное обеспечение», например новый продукт, с которым сталкивается Пользователь, заменяющий Приложение или новый инструмент для загрузки Контента, не считается существенным, поскольку он не повлияет на Пользователей, если они не примут новый продукт. Изменение названий программного обеспечения, терминологии, используемой в настоящей Политике конфиденциальности, и изменение местоположения ссылок также являются примерами несущественных изменений."
       },
       "informationCollected": {
@@ -51,7 +51,7 @@
         "content": "В дополнение к нашим собственным файлам cookie мы также используем различные сторонние файлы cookie, чтобы собирать статистику использования Сервиса, показывать рекламу в Сервисе и через Сервис и т.д. К ним относятся: <0 /><0 /><1><0><0> Google Analytics </0></0><0><0> Mailchimp </0> (только при подписке на любой из наших информационный бюллетень) </0><0><0>Godaddy</0></0></1><0 /> Пожалуйста, см. пункт 3 Политики конфиденциальности для получения дополнительной информации об использовании этих поставщиков."
       },
       "regardingYourCookies": {
-        "title": "Касательно ваших Cookies",
+        "title": "О ваших Cookies",
         "content": "Если вы хотите удалить файлы cookie или дать указание своему веб-браузеру удалить или отказываться от файлов cookie, посетите справочные страницы своего веб-браузера.<0 />‍<0 /> Однако вам следует принять во внимание, что если вы удалите файлы cookie или откажетесь принимать их, вы не сможете использовать все функции, которые мы предлагаем, вы не сможете сохранить свои предпочтения, а некоторые из наших страниц могут отображаться некорректно."
       }
     }
