--- a/src/locales/ru/roles.json
+++ b/src/locales/ru/roles.json
@@ -48,10 +48,10 @@
       }
     },
     "storageLead": {
-      "title": "Главный хранитель",
-      "overview": "Главный хранитель нанимается непосредственно Советом через систему предложений и занимается наймом, увольнением и более широким управлением поставщиками хранилища в сети.",
+      "title": "Руководитель службы хранения",
+      "overview": "Руководитель службы хранения нанимается непосредственно Советом через систему предложений и занимается наймом, увольнением и более широким управлением поставщиками хранилища в сети.",
       "responsibilities": {
-        "storageProviderPerformance": "Главный хранитель несет ответственность за обеспечение надлежащей работы поставщиков услуг хранения. Каждый из них должен содержать полную и актуальную копию каталога контента и обеспечивать бесперебойную работу, чтобы эффективно обслуживать потребителей контента."
+        "storageProviderPerformance": "Руководитель службы хранения несет ответственность за обеспечение надлежащей работы поставщиков услуг хранения. Каждый из них должен содержать полную и актуальную копию каталога контента и обеспечивать бесперебойную работу, чтобы эффективно обслуживать потребителей контента."
       },
       "requirements": {
         "setupAndMaintainInfrastructure": "Иметь опыт настройки и обслуживания высокопроизводительной ИТ-инфраструктуры.",
@@ -66,7 +66,7 @@
         "monitorContent": "Мониторинг публикаций нового контента в каталоге и ответы на сообщения о спорных публикациях.",
         "adjudicateDisputes": "Рассмотрение возможных процессов разрешения споров на основании отчетов пользователей.",
         "updateContentInformation": "Обновление информации о содержимом, чтобы она соответствовала действительности",
-        "collaborateWithBuilders": "Сотрудничать со <0> Строителями</0> для улучшения как инструментов, так и взаимодействия с пользователем, чтобы улучшить целостность каталога данных."
+        "collaborateWithBuilders": "Сотрудничать с <0> Разработчиками</0> для улучшения как инструментов, так и взаимодействия с пользователем, чтобы улучшить целостность каталога данных."
       },
       "requirements": {
         "adjudicateDisputes": "Справедливое решение споров и четкое и прозрачное общение с заинтересованными сторонами и участниками.",
@@ -99,11 +99,11 @@
       }
     },
     "membershipScreener": {
-      "title": "Инспектор членства",
-      "overview": "Членство - это интегрированное представление идентифицирующей информации и связанных с ней действий субъекта на платформе. Прямым способом установления членства будет уплата единовременного взноса. Однако, поскольку в настоящее время многим потенциальным нетехническим конечным пользователям сложно получать, хранить и использовать криптоактивы, у пользователей будет возможность получить членство бесплатно, без каких-либо токенов для использования платформы в ограниченном количестве. Проверка членства - это роль, отвечающая за предоставление такого членства при проверке пользователя на нарушение авторских прав и злонамеренное использование платформы.",
+      "title": "Инспектор участников",
+      "overview": "Членство (участие) - это интегрированное представление идентифицирующей информации и связанных с ней действий субъекта на платформе. Прямым способом установления участия будет уплата единовременного взноса. Однако, поскольку в настоящее время многим потенциальным нетехническим конечным пользователям сложно получать, хранить и использовать криптоактивы, у пользователей будет возможность получить статус участника бесплатно, без каких-либо токенов для использования платформы в ограниченном количестве. Инспектор участников - это роль, отвечающая за предоставление такого членства при проверке пользователя на нарушение авторских прав и злонамеренное использование платформы.",
       "responsibilities": {
         "runAndMaintainScreeningNodes": "Запуск и поддержание нод мониторинга, которые всегда доступны и эффективны.",
-        "collaborate": "Сотрудничать с <0>Кураторами Членства</0> и <1>Строителями</1>, чтобы улучшать механизмы проверки, обсуждая методы проверки, обмениваясь информацией о трафике.",
+        "collaborate": "Сотрудничать с <0>Кураторами Участников</0> и <1>Разработчиками</1>, чтобы улучшать механизмы проверки, обсуждая методы проверки, обмениваясь информацией о трафике.",
         "beResponsive": "Быть отзывчивым и реагировать на меняющиеся обстоятельства"
       },
       "requirements": {
@@ -114,12 +114,12 @@
       }
     },
     "membershipCurator": {
-      "title": "Куратор Членства",
-      "overview": "Членство - это интегрированное представление идентифицирующей информации и связанных с ней действий субъекта на платформе. Можно вступать в членство бесплатно через проверку, описанную <0>выше</0>. Поскольку это по определению несовершенный процесс, должны быть какие-то средства, с помощью которых можно было бы отключить или прятать недобросовестные действия, а также поддельные учетные записи. Это задача кураторов членства.",
+      "title": "Куратор Участников",
+      "overview": "Членство (участие) - это интегрированное представление идентифицирующей информации и связанных с ней действий субъекта на платформе. Можно вступать в участники бесплатно через проверку, описанную <0>выше</0>. Поскольку это по определению несовершенный процесс, должны быть какие-то средства, с помощью которых можно было бы отключить или прятать недобросовестные действия, а также поддельные учетные записи. Это задача кураторов членства.",
       "responsibilities": {
         "monitorPlatformActivity": "Отслеживать активность на уровне платформы на предмет злоупотреблений и сговоров",
         "proposeChanges": "Предлагать изменения в статусе членства и участвовать в любом процессе спора, который может последовать за этим.",
-        "collaborate": "Сотрудничать с <0> Инспекторами</0> и <1> Строителями</1>, чтобы улучшить инструменты для идентификации таких участников."
+        "collaborate": "Сотрудничать с <0> Инспекторами</0> и <1> Разработчиками</1>, чтобы улучшить инструменты для идентификации таких участников."
       },
       "requirements": {
         "dataAnalysisProficiency": "Владение базовым анализом данных и написанием скриптов",
@@ -128,8 +128,8 @@
       }
     },
     "bandwidthProvider": {
-      "title": "Поставщик полосы пропускания",
-      "overview": "Существуют критически важные активы платформы, которые не находятся в цепочке блоков, например изображения и мультимедийный контент. Целостность этих активов обеспечивается цепочкой, но отдельный набор узлов хранения и распределения позволяет загружать и скачивать такие данные. Поставщик полосы пропускания участвует в этой деятельности, в частности, путем масштабного распределения статических данных конечным пользователям.",
+      "title": "Поставщик канала связи",
+      "overview": "Существуют критически важные активы платформы, которые не находятся в цепочке блоков, например изображения и мультимедийный контент. Целостность этих активов обеспечивается цепочкой, но отдельный набор узлов хранения и распределения позволяет загружать и скачивать такие данные. Поставщик канала связи участвует в этой деятельности, в частности, путем масштабного распределения статических данных конечным пользователям.",
       "responsibilities": {
         "runAndMaintainDistributorNodes": "Запуск и обслуживание распределительных узлов, которые доставляют большие объемы исходящих данных большому количеству конечных пользователей одновременно."
       },
@@ -142,10 +142,10 @@
     },
     "discoveryProvider": {
       "title": "Поставщик Поиска",
-      "overview": "Весь контент на платформе находится в определенном каталоге контента, и для эффективной навигации по этому каталогу требуется полная копия этого каталога. Более того, чтобы выполнять такие действия, как поиск и рекомендации на основе контекста, необходимо применить какую-то эвристику поверх этого каталога, что также является довольно чувствительными при повышении объемов. Поставщики Поиска играют роль ответчиков на запросы о посике конечных пользователей, комбинируя быстрые ответы на запросы с локальным поиском и эвристикой политики ранжирования.",
+      "overview": "Весь контент на платформе находится в определенном каталоге контента, и для эффективной навигации по этому каталогу требуется полная копия этого каталога. Более того, чтобы выполнять такие действия, как поиск и рекомендации на основе контекста, необходимо применить какую-то эвристику поверх этого каталога, что также является довольно чувствительными при повышении объемов. Поставщики поиска предоставляют поисковые системы для ответов на запросы конечных пользователей, комбинируя быстрые ответы на запросы с локальным поиском и эвристикой политики ранжирования.",
       "responsibilities": {
         "runAndMaintainDiscoveryNodes": "Запуск и обслуживание узлов поиска, которые отвечают на запросы, связанные с обнаружением данных, синхронизируясь с каталогом контента и применяя эвристику локального ранжирования.",
-        "collaborate": "Сотрудничать со <0>Строителями</0> в улучшении инструментов, повышении удобства пользователей и улучшении поиска."
+        "collaborate": "Сотрудничать с <0>Разработчиками</0> в улучшении инструментов, повышении удобства пользователей и улучшении поиска."
       },
       "requirements": {
         "setupAndMaintainInfrastructure": "Иметь опыт настройки и обслуживания высокопроизводительной ИТ-инфраструктуры.",
@@ -168,8 +168,8 @@
       }
     },
     "builder": {
-      "title": "Строитель",
-      "overview": "Среда выполнения, инструменты, программное обеспечение инфраструктуры и пользовательские приложения - все это должно развиваться с течением времени. Для этого требуется разнообразный набор участников, в том числе <0/><0/> <1> <0><0>Разработчики:</0> разработчики программного обеспечения, специалисты по обработке данных, DevOps и QA </0><0><0>Дизайнеры: </0> сайтов, мобильных устройств, UX/UI, брендинга и другого визуального дизайна </0><0><0> Менеджеры по продуктам: </0> менеджеры по цифровым продуктам, владельцы продуктов и аналитики </0> </0> <0 /> Все эти участники вместе именуются Строителями. Любой может внести свой вклад в этом амплуа, поскольку все исходные ресурсы платформы являются открытыми и разрабатываются в открытом виде. Быть Строителем означает, что у человека есть определенный багаж ответственности, и что у него есть заранее определенная схема вознаграждения, связанная с этой деятельностью.",
+      "title": "Разработчик",
+      "overview": "Среда выполнения, инструменты, программное обеспечение инфраструктуры и пользовательские приложения - все это должно развиваться с течением времени. Для этого требуется разнообразный набор участников, в том числе <0/><0/> <1> <0><0>Разработчики:</0> разработчики программного обеспечения, специалисты по обработке данных, DevOps и QA </0><0><0>Дизайнеры: </0> сайтов, мобильных устройств, UX/UI, брендинга и другого визуального дизайна </0><0><0> Менеджеры по продуктам: </0> менеджеры по цифровым продуктам, владельцы продуктов и аналитики </0> </0> <0 /> Все эти участники вместе именуются Разработчиками. Любой может внести свой вклад в этом амплуа, поскольку все исходные ресурсы платформы являются открытыми и разрабатываются в открытом виде. Быть Разработчиком означает, что у человека есть определенный багаж ответственности, и что у него есть заранее определенная схема вознаграждения, связанная с этой деятельностью.",
       "responsibilities": {
         "collaborate": "Сотрудничать практически со всеми участниками платформы, чтобы поддерживать и улучшать платформу."
       },
@@ -181,11 +181,11 @@
     },
     "communicationModerator": {
       "title": "Модератор Общения",
-      "overview": "Платформа будет иметь несколько способов обеспечения простого и безопасного общедоступного и частного общения, а также обмена информацией между участниками. В частности, в платформу будут встроены как форум, так и возможность обмена сообщениями. Но для того, чтобы эти пространства стали эффективными способами общения, потребуется некоторая модерация. Модераторы Общения контролируют эту деятельность.",
+      "overview": "Платформа будет иметь несколько способов обеспечения простого и безопасного публичного и частного общения, а также обмена информацией между участниками. В частности, в платформу будут встроены как форум, так и возможность обмена сообщениями. Но для того, чтобы эти пространства стали эффективными способами общения, потребуется некоторая модерация. Модераторы Общения контролируют эту деятельность.",
       "responsibilities": {
         "monitorCommuncationChannels": "Следить и контролировать общедоступные каналы связи на предмет соответствия политикам использования, принятым в системе управления.",
         "communicateWithUsers": "Сообщать конечным пользователям о возможных нарушениях и санкциях",
-        "collaborate": "Сотрудничать, чтобы при изменении обстоятельств разрабатывать новые политики"
+        "collaborate": "Сотрудничать, вырабатывать новые политики, руководствуясь изменениями обстоятельств."
       },
       "requirements": {
         "platformUnderstanding": "Глубокое понимание структуры и функций платформы Joystream.",
