--- a/src/locales/ru/rome.json
+++ b/src/locales/ru/rome.json
@@ -5,7 +5,7 @@
     },
     "hero": {
       "title": "Сеть Rome",
-      "text": "Изучай доступные варианты участия и выбирай те, которые тебе больше всего подходят. Влияй на развитие платформы и зарабатывай при этом реальные деньги.",
+      "text": "Изучите доступные варианты участия и выбирайте те, которые вам больше всего подходят. Влияйте на развитие платформы и зарабатывайте при этом реальные деньги.",
       "chipText": "Что это?"
     },
     "heroCard": {
@@ -23,7 +23,7 @@
       },
       "releasePlan": {
         "title": "Релиз план",
-        "text": "Читай релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
+        "text": "Прочесть релиз план в том виде, каким он был создан во время планирования и узнать, как проходила разработка."
       }
     },
     "testnetGoals": {
