--- a/src/locales/ru/sparta.json
+++ b/src/locales/ru/sparta.json
@@ -26,7 +26,7 @@
         },
         "bugs": {
           "title": "Поддержка критических ошибок на, относительно, приемлемом уровне",
-          "text": "Как показывает факт, что наша сеть вышла из строя, мы не достигли нашей цели."
+          "text": "Как показывает факт выхода нашей сети из строя, мы не достигли нашей цели."
         }
       }
     },
