--- a/src/locales/ru/sumer.json
+++ b/src/locales/ru/sumer.json
@@ -11,11 +11,11 @@
       "title": "Важная документация",
       "releasePlan": {
         "title": "Релиз план",
-        "text": "Изучи релиз план в том виде, каким он был создан во время планирования и узнавай, как проходила разработка."
+        "text": "Изучить релиз план в том виде, каким он был создан во время планирования и узнать, как проходила разработка."
       },
       "blogPost": {
         "title": "Объявление в блоге",
-        "text": "Изучи краткое руководство по тестнету Sumer и его целям."
+        "text": "Изучить краткое руководство по тестнету Sumer и его целям."
       }
     },
     "testnetGoals": {
@@ -24,15 +24,15 @@
       "goals": {
         "contentPublishing": {
           "title": "Сделать доступным публикацию контента из интерфейса для воспроизведения.",
-          "text": "Sumer представляет возможность создавать каналы и видео и управлять ими в Joystream Player, заменяя громоздкий и сложный процесс публикации, который требует работы с интерфейсом командной строки, которым необходимо было пользоваться в теснете Antioch."
+          "text": "Sumer представляет возможность создавать каналы и видео и управлять ими в Joystream Player, заменяя громоздкий и сложный процесс публикации, который требует работы с интерфейсом командной строки, которым необходимо было пользоваться в тестнете Antioch."
         },
         "deployingNewContentDirectory": {
-          "title": "Публикация нового каталога данных",
-          "text": "В рамках Sumer мы предоставляем простой встроенный модуль времени выполнения. Это связано с тем, что технические сложности и необходимость компромиссов, в предыдущих итерациях развития каталога были неприемлемы."
+          "title": "Публикация нового каталога контента",
+          "text": "В рамках Sumer мы предоставляем исправленный системный компонент по управлению контентом. Это связано с тем, что технические сложности и необходимость компромиссов, в предыдущих версиях каталога были неприемлемы."
         },
         "enableBuilderRole": {
           "title": "Подключения роли строителя платформы",
-          "text": "Мы представляем новую рабочую группу, специализирующуюся на работе с платформамой. Первоначально мы также планировали включить новую роль \"Шлюз\", хотя это не вошло в выпуск Sumer."
+          "text": "Мы представляем новую рабочую группу, специализирующуюся на функциональных улучшениях платформы. Первоначально мы также планировали включить новую роль \"Шлюз\", хотя это не вошло в выпуск Sumer."
         }
       }
     },
