--- a/src/locales/ru/token.json
+++ b/src/locales/ru/token.json
@@ -34,15 +34,15 @@
       },
       "linkBetweenTJoyAndFutureToken": {
         "title": "Существует ли связь между tJOY и будущими токенами основной сети?",
-        "text": "Нет прямой связи между tJOY и JOY. Мы используем tJOY для моделирования реальных экономических стимулов, присутствующих в основной сети, чтобы способствовать развитию платформы и способствовать росту и обучению нашего сообщества при подготовке перехода от тестнета к реальной работе."
+        "text": "Нет прямой связи между tJOY и JOY. Мы используем tJOY для моделирования реальных экономических стимулов, присутствующих в основной сети, чтобы способствовать развитию платформы и способствовать росту и обучению нашего сообщества при подготовке перехода от тестнета к основной сети."
       },
       "howToCashout": {
         "title": "Как обналичить tJOY в USD?",
-        "text": "Мы используем Bitcoin Cash (BCH) в качестве средства оплаты в наших тестнетах. Вы можете обналичить tJOY, сделав перевод на выделенный адрес: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Перед тем как это сделать, вы должны установить <0>memo</0> ключа, с которого осуществляется перевод на ваш адрес BCH. Мы фиксируем курс BCH/USD на момент осуществления перевода. <1/><1/>С детальной информацией можно ознакомиться <2>здесь</2>."
+        "text": "Мы используем Bitcoin Cash (BCH) в качестве криптовалюты для вывода средств в наших тестнетах. Вы можете обналичить tJOY, сделав перевод на выделенный адрес: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Перед тем как это сделать, вы должны установить <0>memo</0> ключа, с которого осуществляется перевод на ваш адрес BCH. Мы фиксируем курс BCH/USD на момент осуществления перевода. <1/><1/>С детальной информацией можно ознакомиться <2>здесь</2>."
       },
       "howToEarn": {
         "title": "Как можно заработать токены основной сети JOY?",
-        "text": "В настоящее время единственный способ обеспечить распределение JOY в основной сети - это качественный вклад в платформу и сообщество через нашу <0>Программу для членов-учредителей</0>."
+        "text": "В настоящее время единственный способ обеспечить распределение JOY в основной сети - это качественный вклад в платформу и сообщество через нашу <0>Программу для ключевых участников</0>."
       },
       "TJoyWorth": {
         "title": "Сколько стоит tJOY?",
@@ -51,7 +51,7 @@
     },
     "cashouts": {
       "title": "Ожидаемые выплаты",
-      "subtitle": "Токены, отправленные Jsgenesis на обмен, будут утилизированы, т.к. конечная стоимость токенов должна остаться неизменной при таком обмене.",
+      "subtitle": "Токены, отправленные Jsgenesis на обмен, будут сожжены, поэтому конечная стоимость токенов должна остаться неизменной при таком обмене.",
       "cashout": {
         "address": "Адрес отправителя",
         "tokensTransferred": "Отправленные токены",
